@@ -7,6 +7,7 @@
 	* src/color.c (color_update): Strip things bare to see the sameness.
 	* src/color.c (found_in_list): Factor out this triple repetition.
 	* src/color.c (color_update): Rename a variable for conciseness.
+	* src/color.c (nfreeregex): Elide this function, now used just once.
 
 GNU nano 2.5.3 - 2016.02.25
 
